--- a/app/src/main/res/layout-v21/activity_play_song.xml
+++ b/app/src/main/res/layout-v21/activity_play_song.xml
@@ -119,7 +119,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="25dp"
-            android:progress="30"
             android:theme="@style/SeekBarTheme"
             app:layout_constraintBottom_toTopOf="@+id/btnPlay" />
 
@@ -130,7 +129,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/_1_37"
+            android:text="@string/_00_00"
             android:textColor="@color/colorPrimaryText"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/playerSeekBar"
@@ -141,7 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:text="@string/_4_12"
+            android:text="@string/_00_00"
             android:textColor="@color/colorPrimaryText"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/playerSeekBar"
@@ -156,23 +155,14 @@
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:text="@string/now_playing"
-            android:textAllCaps="true"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextAppearance="@style/Toolbar.TitleText">
 
         <ImageButton
             android:id="@+id/btnMorePlaySong"
             android:layout_width="30dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="90dp"
+            android:layout_gravity="right"
             android:background="@null"
             android:src="@drawable/ic_baseline_more_vert_24"
             android:tint="@android:color/black" />
