--- a/app/src/main/res/layout/line_play_list_songs.xml
+++ b/app/src/main/res/layout/line_play_list_songs.xml
@@ -11,12 +11,12 @@
 
         <TextView
             android:id="@+id/txtIndexPlaySongs"
-            android:layout_width="wrap_content"
+            android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:text="1"
+            android:text="12."
             android:textColor="#141414"
             android:textSize="17sp" />
 
