--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,13 +10,15 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/myViewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/myTabLayout"
+        android:layout_marginBottom="0dp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/myTabLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:background="@android:color/transparent"
         app:tabBackground="@color/black"
         app:tabIndicatorColor="@color/white"
@@ -24,4 +26,18 @@
         app:tabSelectedTextColor="@color/white"
         app:tabTextAppearance="@style/MyCustomTabText"
         app:tabTextColor="@color/login_form_details_medium" />
-</LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/frameMini"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/myTabLayout"
+        android:background="@color/white">
+
+        <fragment
+            android:name="com.example.mymusic.fragments.NowPlayingFragmentBottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_now_playing_bottom" />
+    </FrameLayout>
+</RelativeLayout>
