--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,7 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#6D97EA">
+    android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/viewIconSearch"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/ablSearchSong"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="155dp"
+        android:background="@drawable/search_background"
+        android:backgroundTint="#BFC9CA" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvSearchView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/ablSearchSong">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/ablSearchSong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D5DBDB">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tlbSearchSong"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#D6DBDF">
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <TextView
+        android:id="@+id/txtNullResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/viewIconSearch"
+        android:layout_marginTop="45dp"
+        android:gravity="center"
+        android:text="@string/search_musiclife"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/txtBelow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtNullResult"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/find_artists_tracks_albums_and_playlist"
+        android:textColor="@color/colorSecondaryText" />
 </RelativeLayout>
