--- a/app/src/main/res/layout/activity_music_device.xml
+++ b/app/src/main/res/layout/activity_music_device.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="15dp"
             android:text="@string/music_from_the_device"
             android:textColor="#ffff"
-            android:textSize="26sp" />
+            android:textSize="20dp" />
     </LinearLayout>
 
 </RelativeLayout>
