--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -66,10 +66,10 @@
         <TextView
             android:id="@+id/txtLogin"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="40dp"
             android:layout_marginTop="23dp"
             android:layout_toLeftOf="@+id/btnLogin"
-            android:text="Login"
+            android:text="@string/login"
             android:textSize="15sp" />
 
         <ImageButton
