--- a/app/src/main/res/layout/activity_play_from_device.xml
+++ b/app/src/main/res/layout/activity_play_from_device.xml
@@ -64,7 +64,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/txtLyrics"
+            android:id="@+id/txtShowCmt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -76,11 +76,11 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <ImageView
-            android:id="@+id/imgLyrics"
+            android:id="@+id/imgShowCmt"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:contentDescription="@string/app_name"
-            app:layout_constraintBottom_toTopOf="@+id/txtLyrics"
+            app:layout_constraintBottom_toTopOf="@+id/txtShowCmt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -94,7 +94,7 @@
             android:padding="12dp"
             android:src="@drawable/ic_baseline_pause_24"
             android:tint="@color/colorWhite"
-            app:layout_constraintBottom_toTopOf="@+id/imgLyrics"
+            app:layout_constraintBottom_toTopOf="@+id/imgShowCmt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
