--- a/app/src/main/res/drawable/custom_bg_cmt.xml
+++ b/app/src/main/res/drawable/custom_bg_cmt.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#F2F3F4"/>
-            <stroke android:color="#576574" android:width="2dp" />
+            <solid android:color="#F8F9F9"/>
+            <stroke android:color="#F8F9F9"/>
             <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="15dp" />
+            <corners android:radius="20dp" />
         </shape>
     </item>
 </selector>
