--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,15 +152,7 @@
 
         </RelativeLayout>
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp" />
-
         <com.google.android.gms.common.SignInButton
-            android:layout_marginBottom="25dp"
             android:id="@+id/sign_in_button"
             android:layout_width="199dp"
             android:layout_height="32dp"
@@ -168,7 +160,15 @@
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
             android:layout_marginEnd="100dp"
-            android:layout_marginRight="100dp" />
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="5dp" />
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="25dp" />
     </LinearLayout>
 
 
