--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -10,7 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/inputCmt"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:scrollbars="vertical"
+        android:scrollbarSize="3dp"
+        android:scrollbarThumbVertical="@android:color/darker_gray" />
 
     <LinearLayout
         android:id="@+id/inputCmt"
