--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -58,7 +58,8 @@
         android:background="@drawable/fab"
         android:backgroundTint="#99A3A4"
         android:scaleType="fitXY"
-        android:src="@drawable/circlecropped"
+        app:maxImageSize="56dp"
+        android:src="@drawable/playalist"
         app:borderWidth="0dp"
         app:fabSize="normal"
         app:layout_anchor="@id/appBarLayout"
