--- a/app/src/main/res/layout/activity_corona.xml
+++ b/app/src/main/res/layout/activity_corona.xml
@@ -356,7 +356,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView21"
-            app:srcCompat="@drawable/global" />
+            app:srcCompat="@drawable/image_corona" />
 
         <TextView
             android:id="@+id/textView21"
